--- a/02-NumPy/1-Array_NumPy.ipynb
+++ b/02-NumPy/1-Array_NumPy.ipynb
@@ -38,6 +38,7 @@
    "cell_type": "markdown",
    "source": [
     "**Array NumPy**\n",
+    "\n",
     "Array is the main use in Numpy.\n",
     "There two types of array :\n",
     "   1. One dimensional array (vector)\n",
@@ -104,7 +105,9 @@
    "cell_type": "markdown",
    "source": [
     "**Create a table from an integration method**\n",
+    "\n",
     "*arange*\n",
+    "\n",
     "Returns evenly spaced values in a given interval."
    ],
    "metadata": {
@@ -142,7 +145,8 @@
    "cell_type": "markdown",
    "source": [
     "*Zeros & Ones*\n",
-    "Generates arrays of zeros or ones"
+    "\n",
+    "Generate arrays of zeros or ones"
    ],
    "metadata": {
     "collapsed": false,
@@ -246,8 +250,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "*linspace*\n",
-    "Returns evenly spaced numbers over a specified interval."
+    "*eye*\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -262,9 +265,46 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([ 0.,  5., 10.])"
+      "text/plain": "array([[1., 0., 0., 0.],\n       [0., 1., 0., 0.],\n       [0., 0., 1., 0.],\n       [0., 0., 0., 1.]])"
      },
      "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.eye(4)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "*linspace*\n",
+    "\n",
+    "Returns evenly spaced numbers over a specified interval."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([ 0.,  5., 10.])"
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,13 +321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "array([  0.,   2.,   4.,   6.,   8.,  10.,  12.,  14.,  16.,  18.,  20.,\n        22.,  24.,  26.,  28.,  30.,  32.,  34.,  36.,  38.,  40.,  42.,\n        44.,  46.,  48.,  50.,  52.,  54.,  56.,  58.,  60.,  62.,  64.,\n        66.,  68.,  70.,  72.,  74.,  76.,  78.,  80.,  82.,  84.,  86.,\n        88.,  90.,  92.,  94.,  96.,  98., 100.])"
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +346,9 @@
    "cell_type": "markdown",
    "source": [
     "*Random*\n",
+    "\n",
     "*Rand*\n",
+    "\n",
     "Create an array of the given form and fill it with random samples from a uniform distribution on [0,1]"
    ],
    "metadata": {
@@ -318,13 +360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([0.40907288, 0.95056872])"
+      "text/plain": "array([0.33873562, 0.83719563])"
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,13 +383,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[0.59183823, 0.51220378, 0.68204452, 0.23432931, 0.29014905],\n       [0.61387463, 0.62917035, 0.20701412, 0.36082063, 0.86046779],\n       [0.96704765, 0.88357326, 0.03323868, 0.04154095, 0.56511678],\n       [0.7677017 , 0.46009831, 0.28439794, 0.09752726, 0.30393683],\n       [0.86940713, 0.45797683, 0.53721766, 0.52560532, 0.06420993]])"
+      "text/plain": "array([[0.52249404, 0.07030515, 0.99244413, 0.77793368, 0.43921741],\n       [0.41285888, 0.95904536, 0.47212486, 0.55117157, 0.23821795],\n       [0.32547189, 0.22852859, 0.99523107, 0.11928668, 0.6605855 ],\n       [0.24988128, 0.16533342, 0.87540868, 0.63763197, 0.61972659],\n       [0.64682684, 0.9337785 , 0.13513682, 0.93396749, 0.87724404]])"
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,6 +408,7 @@
    "cell_type": "markdown",
    "source": [
     "*Randn*\n",
+    "\n",
     "Returns a sample of the \"standard normal\" distribution. Unlike rand which is uniform"
    ],
    "metadata": {
@@ -381,7 +424,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([1.04170396, 0.14752045])"
+      "text/plain": "array([0.68344811, 2.39307479])"
      },
      "execution_count": 14,
      "metadata": {},
@@ -404,7 +447,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[-0.97524829,  0.91962071,  1.08569081, -0.92138457,  0.74909482],\n       [-0.29169792, -1.65429018,  1.46522164,  0.08232895,  1.46704653],\n       [ 0.89568751,  0.07478868, -0.5603055 ,  1.25783529,  1.16240424],\n       [-0.39601512,  0.26852886,  1.07542603, -1.90455051,  0.93362544],\n       [-0.18785823,  0.90469376, -0.59226321,  0.14617173,  0.40930764]])"
+      "text/plain": "array([[-1.08327017,  0.12218085,  0.42065191,  1.29950078,  0.24180997],\n       [-0.47590963,  0.39729626,  1.71785419,  0.89772253,  0.13285081],\n       [-0.82555143,  0.69309938, -0.96471168, -1.66444709,  1.96239591],\n       [ 0.09677664,  0.87292603, -0.6727332 , -0.73387836,  1.34982974],\n       [ 1.87658367, -0.69938243, -0.49666924,  0.5904136 ,  2.04278601]])"
      },
      "execution_count": 15,
      "metadata": {},
@@ -425,6 +468,7 @@
    "cell_type": "markdown",
    "source": [
     "*Randint*\n",
+    "\n",
     "Returns random integers from `low` (inclusive) to `high` (exclusive)"
    ],
    "metadata": {
@@ -440,7 +484,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "15"
+      "text/plain": "59"
      },
      "execution_count": 16,
      "metadata": {},
@@ -463,7 +507,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([27, 25, 95,  9, 38, 18, 62, 39, 76,  5])"
+      "text/plain": "array([36, 24, 31, 90, 94, 61, 80, 42, 13, 57])"
      },
      "execution_count": 17,
      "metadata": {},
@@ -483,7 +527,46 @@
   {
    "cell_type": "markdown",
    "source": [
+    "*Random Seed*\n",
+    "\n",
+    "To fix (seed) the random number, we use `np.random.seed`"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.51639863])"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(101)\n",
+    "np.random.rand(1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "**reshape**\n",
+    "\n",
     "Returns an array containing the same data with a new shape"
    ],
    "metadata": {
@@ -495,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "arr = np.arange(25)"
@@ -509,13 +592,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[ 0,  1,  2,  3,  4],\n       [ 5,  6,  7,  8,  9],\n       [10, 11, 12, 13, 14],\n       [15, 16, 17, 18, 19],\n       [20, 21, 22, 23, 24]])"
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +617,9 @@
    "cell_type": "markdown",
    "source": [
     "*max, min, argmax, argmin*\n",
+    "\n",
     "max, min return the max, min of an array\n",
+    "\n",
     "argmax, argmin return the index of the max, min of an array"
    ],
    "metadata": {
@@ -546,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "ran_arr = np.random.randint(0,50,10)"
@@ -560,13 +645,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
-      "text/plain": "46"
+      "text/plain": "47"
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,11 +668,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "47"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(ran_arr)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "4"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ran_arr.min()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "4"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(ran_arr)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "outputs": [
     {
      "data": {
-      "text/plain": "46"
+      "text/plain": "4"
      },
      "execution_count": 26,
      "metadata": {},
@@ -595,7 +749,7 @@
     }
    ],
    "source": [
-    "np.max(ran_arr)"
+    "ran_arr.argmax()"
    ],
    "metadata": {
     "collapsed": false,
@@ -618,75 +772,6 @@
     }
    ],
    "source": [
-    "ran_arr.min()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "8"
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.min(ran_arr)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "4"
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ran_arr.argmax()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "2"
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "ran_arr.argmin()"
    ],
    "metadata": {
@@ -699,7 +784,80 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Sum by Column"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([50, 55, 60, 65, 70])"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.arange(25).reshape(5,5)\n",
+    "np.sum(arr, axis=0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Sum by line"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([ 10,  35,  60,  85, 110])"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.arange(25).reshape(5,5)\n",
+    "np.sum(arr, axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "*Shape*\n",
+    "\n",
     "Return the dimension of an array"
    ],
    "metadata": {
@@ -711,13 +869,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "outputs": [
     {
      "data": {
-      "text/plain": "(25,)"
+      "text/plain": "(5, 5)"
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,6 +894,7 @@
    "cell_type": "markdown",
    "source": [
     "*dtype*\n",
+    "\n",
     "Return the data type of the object in the array"
    ],
    "metadata": {
@@ -747,13 +906,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
       "text/plain": "dtype('int32')"
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,18 +920,6 @@
    "source": [
     "arr.dtype"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
