--- a/03-Pandas/01-Series.ipynb
+++ b/03-Pandas/01-Series.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Arithmetic"
+    "## Series\n",
+    "\n",
+    "A series is very similar to a NumPy array (in fact, it is built on the NumPy array object). What differentiates the NumPy array from a series is that a series can have axis labels, which means it can be indexed by a label, instead of just a number location. It also doesn't need to contain numeric data, it can contain any arbitrary Python object"
    ],
    "metadata": {
     "collapsed": false,
@@ -17,8 +19,8 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "arr = np.arange(0,10)"
+    "import pandas as pd\n",
+    "import numpy as np"
    ],
    "metadata": {
     "collapsed": false,
@@ -28,20 +30,26 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "**Creation of Series**"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18])"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "arr + arr"
+    "my_list = [10, 20, 30]\n",
+    "labels = ['a', 'b', 'c']\n",
+    "d = {'a':10, 'b':20, 'c':30}\n",
+    "arr = np.array([10, 20, 30])"
    ],
    "metadata": {
     "collapsed": false,
@@ -56,7 +64,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([ 0,  1,  4,  9, 16, 25, 36, 49, 64, 81])"
+      "text/plain": "a    10\nb    20\nc    30\ndtype: int64"
      },
      "execution_count": 3,
      "metadata": {},
@@ -64,7 +72,7 @@
     }
    ],
    "source": [
-    "arr * arr"
+    "pd.Series(my_list, index=labels,)"
    ],
    "metadata": {
     "collapsed": false,
@@ -79,7 +87,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([ 0.        ,  3.14159265,  6.28318531,  9.42477796, 12.56637061,\n       15.70796327, 18.84955592, 21.99114858, 25.13274123, 28.27433388])"
+      "text/plain": "a    10\nb    20\nc    30\ndtype: int32"
      },
      "execution_count": 4,
      "metadata": {},
@@ -87,7 +95,7 @@
     }
    ],
    "source": [
-    "arr * np.pi"
+    "pd.Series(arr, labels)"
    ],
    "metadata": {
     "collapsed": false,
@@ -101,16 +109,8 @@
    "execution_count": 5,
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Katana\\AppData\\Local\\Temp\\ipykernel_13740\\2811617162.py:1: RuntimeWarning: invalid value encountered in divide\n",
-      "  arr / arr\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": "array([nan,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.])"
+      "text/plain": "a    10\nb    20\nc    30\ndtype: int64"
      },
      "execution_count": 5,
      "metadata": {},
@@ -118,36 +118,12 @@
     }
    ],
    "source": [
-    "arr / arr"
+    "pd.Series(d)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "if we have a division by zero, we have a `warning message` and not an `error message`. The result of this division will be `NaN`."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Universal Array Functions"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
     }
    }
   },
@@ -157,7 +133,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([0.        , 1.        , 1.41421356, 1.73205081, 2.        ,\n       2.23606798, 2.44948974, 2.64575131, 2.82842712, 3.        ])"
+      "text/plain": "0    a\n1    b\n2    c\ndtype: object"
      },
      "execution_count": 6,
      "metadata": {},
@@ -165,7 +141,7 @@
     }
    ],
    "source": [
-    "np.sqrt(arr)"
+    "pd.Series(data= labels)"
    ],
    "metadata": {
     "collapsed": false,
@@ -175,20 +151,24 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "**Index**"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([1.00000000e+00, 2.71828183e+00, 7.38905610e+00, 2.00855369e+01,\n       5.45981500e+01, 1.48413159e+02, 4.03428793e+02, 1.09663316e+03,\n       2.98095799e+03, 8.10308393e+03])"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.exp(arr)"
+    "ser1 = pd.Series([1,2,3,4], index=['USA','CHINA','FRANCE','GERMANY'])\n",
+    "ser2 = pd.Series([1,2,3,4], index=['USA','CHINA','ITALY','JAPAN'])"
    ],
    "metadata": {
     "collapsed": false,
@@ -203,7 +183,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "9"
+      "text/plain": "USA        1\nCHINA      2\nFRANCE     3\nGERMANY    4\ndtype: int64"
      },
      "execution_count": 8,
      "metadata": {},
@@ -211,7 +191,7 @@
     }
    ],
    "source": [
-    "np.max(arr)"
+    "ser1"
    ],
    "metadata": {
     "collapsed": false,
@@ -226,7 +206,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([ 0.        ,  0.84147098,  0.90929743,  0.14112001, -0.7568025 ,\n       -0.95892427, -0.2794155 ,  0.6569866 ,  0.98935825,  0.41211849])"
+      "text/plain": "3"
      },
      "execution_count": 9,
      "metadata": {},
@@ -234,7 +214,7 @@
     }
    ],
    "source": [
-    "np.sin(arr)"
+    "ser1['FRANCE']"
    ],
    "metadata": {
     "collapsed": false,
@@ -248,16 +228,8 @@
    "execution_count": 10,
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Katana\\AppData\\Local\\Temp\\ipykernel_13740\\2931416741.py:1: RuntimeWarning: divide by zero encountered in log\n",
-      "  np.log(arr)\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": "array([      -inf, 0.        , 0.69314718, 1.09861229, 1.38629436,\n       1.60943791, 1.79175947, 1.94591015, 2.07944154, 2.19722458])"
+      "text/plain": "CHINA      4.0\nFRANCE     NaN\nGERMANY    NaN\nITALY      NaN\nJAPAN      NaN\nUSA        2.0\ndtype: float64"
      },
      "execution_count": 10,
      "metadata": {},
@@ -265,7 +237,7 @@
     }
    ],
    "source": [
-    "np.log(arr)"
+    "ser1+ser2"
    ],
    "metadata": {
     "collapsed": false,
@@ -275,14 +247,14 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "We have a warring message because `log(0) = ∞`"
-   ],
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
    }
   }
